--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     height: 100vh; /* Faz o body ocupar 100% da altura da tela */
     margin: 0; /* Remove a margem padrão */
     text-align: center; /* Centraliza os textos */
-    background-color: lightgray; /* Cor de fundo opcional */
+    background-color: rgba(231, 117, 231, 0.493); /* Cor de fundo opcional */
 }
 
 /* Estilo para a div que contém a imagem */
@@ -23,13 +23,13 @@ img {
 
 /* Estilo para o título h1 */
 h1 {
-    color: rgb(221, 20, 247);
+    color: rgb(216, 110, 184);
     margin-top: 20px; /* Espaço superior */
     font-size: 32px; /* Define o tamanho da fonte */
 }
 
 /* Estilo para o subtítulo h2 */
 h2 {
-    color: rgba(55, 88, 194, 0.966);
+    color: rgba(108, 134, 219, 0.966);
     margin-top: 10px; /* Espaço superior */
     font-size: 24px; /* Define o tamanho da fonte */
