--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     height: 170vh; /* Faz o body ocupar 100% da altura da tela */
     margin: 0; /* Remove a margem padrão */
     text-align: center; /* Centraliza os textos */
-    background-color: rgb(255, 134, 195); /* Cor de fundo opcional */
+    background-color: rgb(18, 75, 11); /* Cor de fundo opcional */
 }
 
 /* Estilo para a div que contém a imagem */
@@ -23,14 +23,14 @@ img {
 
 /* Estilo para o título h1 */
 h1 {
-    color: rgb(248, 3, 236);
+    color: rgb(14, 173, 75);
     margin-top: 20px; /* Espaço superior */
     font-size: 32px; /* Define o tamanho da fonte */
 }
 
 /* Estilo para o título h2 */
 h2 {
-    color: rgb(223, 23, 9);
+    color: rgb(203, 223, 27);
     margin-top: 20px; /* Espaço superior */
     font-size: 32px; /* Define o tamanho da fonte */
 }
@@ -45,11 +45,11 @@ h3 {
 
 /* Estilo para o subtítulo h4 */
 h4 {
-    color: rgba(214, 27, 158, 0.966);
+    color: rgba(40, 141, 45, 0.966);
     margin-top: 10px; /* Espaço superior */
     font-size: 24px; /* Define o tamanho da fonte */ 
 }
 body {
-    background-image: url('ROSA.jpeg');
+    background-image: url('fundo.jpg')
     background-size: cover;
 }
