--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h2 {
 
 /* Estilo para o subtítulo h3 */
 h3 {
-    color: rgba(12, 12, 12, 0.966);
+    color: rgba(1, 34, 6, 0.966);
     margin-top: 10px; /* Espaço superior */
     font-size: 24px; /* Define o tamanho da fonte */ 
 }
@@ -50,6 +50,6 @@ h4 {
     font-size: 24px; /* Define o tamanho da fonte */ 
 }
 body {
-    background-image: url('fundo.jpg')
+    background-image: url('fundo.jpg');
     background-size: cover;
 }
